kube/hostname_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: show-hostname-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: show-hostname
